# gForceSDK

./: .gitignore  CHANGELOG.md  GForce_SDK.sln  LICENSE.md  README.md  SDK_BLE_GUI.sln  STRUCTURE.md
Debug/: GForce_SDK.ilk
GForce_SDK/: GForce_SDK.vcxproj  GForce_SDK.vcxproj.filters  ReadMe.txt  stdafx.cpp
GForce_SDK/App/: app.cpp
GForce_SDK/Debug/: GForce_SDK.pch.codeanalysis  com.nativecodeanalysis.xml  log.nativecodeanalysis.xml  thread.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc140.idb
GForce_SDK/Include/: Thread.h  com.h  gatt.h  hci_tl.h  log.h  npi_cmd.h  npi_evt.h
GForce_SDK/NpiInterface/: com.cpp  log.cpp  npi_cmd.cpp  npi_evt.cpp
ModelingProject1/ModelDefinition/: ModelingProject1.uml
NPI/Include/: CommonDef.h  Thread.h  app.h  com.h  gap.h  gatt.h  hci_tl.h  log.h  npi_cmd.h  npi_evt.h  npi_queue.h  npi_tl.h
NPI/NpiInterface/: Thread.cpp  com.cpp  log.cpp  npi_cmd.cpp  npi_evt.cpp  npi_tl.cpp
SDK_BLE_GUI/: SDK_BLE_GUI.rc  SDK_BLE_GUI.vcxproj  SDK_BLE_GUI.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
SDK_BLE_GUI/App/: ButtGattView.cpp  CmdTab1_Dlg.cpp  CmdTab2_Dlg.cpp  CmdTab3_Dlg.cpp  CmdTab4_Dlg.cpp  CmdView.cpp  GuiEvtHdl.cpp  LogView.cpp  NewDeviceDlg.cpp  SDK_BLE_GUI.cpp
SDK_BLE_GUI/Inc/: ButtGattView.h  CmdTab1_Dlg.h  CmdTab2_Dlg.h  CmdTab3_Dlg.h  CmdView.h  (+4 more)
binding/unity3d/libgforce/android/gforce/libgforce/: CMakeLists.txt  build.gradle
binding/unity3d/libgforce/android/gforce/libgforce/src/androidTest/java/com/oymotion/gforce/: ExampleInstrumentedTest.java
binding/unity3d/libgforce/android/gforce/libgforce/src/main/java/com/oymotion/gforce/: MainActivity.java
binding/unity3d/libgforce/android/gforce/libgforce/src/main/res/values/: strings.xml
binding/unity3d/libgforce/android/gforce/libgforce/src/test/java/com/oymotion/gforce/: ExampleUnitTest.java
example/: gForceExample.sln
inc/: Adapter.h  AdapterFactory.h  AdapterListener.h  Device.h  DeviceListener.h  DeviceSetting.h  Dongle.h  DongleListener.h  DongleManager.h  Hub.h  HubListener.h  HubManager.h  Quaternion.h  gfTypes.h  gforce.h
script/: Doxyfile
src/: AdapterFactory.cpp  BLEAdapter.cpp  BLEAdapter.h  BLEDataProfile3.cpp  BLEDataProfile3.h  BLEDataProfile4.cpp  BLEDataProfile4.h  BLEDevice.cpp  BLEDevice.h  BLEDongle.cpp  BLEDongle.h  BLEHub.cpp  BLEHub.h  DeviceHelper.h  DeviceProfile.h  DeviceSettingDataProfile3.cpp  DeviceSettingDataProfile3.h  DeviceSettingDataProfile4.cpp  DeviceSettingDataProfile4.h  DeviceSettingHandle.cpp  DeviceSettingHandle.h  DongleManager.cpp  GForceDevice.cpp  GForceDevice.h  HubManager.cpp  HubManagerImpl.cpp  HubManagerImpl.h  IAdapter.h  IDongle.h  IHub.h  OADProfile.cpp  OADProfile.h  SimpleProfile.cpp  SimpleProfile.h  Utils.h  VirtualDevice.h  gforce.cpp
(+456 files in other folders)
